# PRML_Homework1

./: .gitignore  README.md  pyproject.toml  requirements.txt  sonar_classification.py  tox.ini
data/: .gitkeep
docs/: history.md
logs/: .gitkeep
models/: .gitkeep
output/: .gitkeep
src/prcv_sonar/: __init__.py  main.py
src/prcv_sonar/models/: __init__.py  lda.py  svm.py
src/prcv_sonar/utils/: __init__.py  data_loader.py  preprocessor.py
src/prcv_sonar/visualization/: __init__.py  confusion_matrix.py  lda_plot.py  svm_boundary.py
src/prml_sonar/: main.py
src/prml_sonar/models/: __init__.py
src/prml_sonar/utils/: preprocessor.py
src/prml_sonar/visualization/: __init__.py
tests/: test_data_loader.py  test_lda.py  test_svm.py
